--- a/AGDPMS.Shared/Components/Production/Orders/OrderStatusBar.razor
+++ b/AGDPMS.Shared/Components/Production/Orders/OrderStatusBar.razor
@@ -1,6 +1,6 @@
 @using AGDPMS.Shared.Models
 @inject HttpClient Http
-@namespace AGDPMS.Shared.Components.Production.Stages
+@namespace AGDPMS.Shared.Components.Production.Orders
 
 <div class="card">
     <div class="card-body">
