--- a/AGDPMS.Web/Components/Report/ReceiptPage.razor
+++ b/AGDPMS.Web/Components/Report/ReceiptPage.razor
@@ -19,11 +19,11 @@
 @code {
 	public void GenerateIssue()
 	{
-		reportSerivce.GenerateIssue(new List<StockTransaction>());
+		reportSerivce.GenerateIssue(new List<StockIssue>());
 	}
 	public void GenerateReceipt()
 	{
-		reportSerivce.GenerateIssue(new List<StockTransaction>());
+		reportSerivce.GenerateReceipt(new List<StockReceipt>());
 	}
 	public void GenerateQuotation()
 	{
