--- a/AGDPMS.Web/Components/Inventory/ManageIssue.razor
+++ b/AGDPMS.Web/Components/Inventory/ManageIssue.razor
@@ -9,40 +9,28 @@
 
 @inject IInventoryService inventoryService
 
-<PageTitle>Kho</PageTitle>
+<PageTitle>Quản lý xuất kho</PageTitle>
 
 <h3>Quản lý xuất kho</h3>
 
 <div class="card mb-3">
-    <h5 class="card-header">Bộ lọc tìm kiếm</h5>
+    <h5 class="card-header">Tìm kiếm</h5>
     <div class="m-3">
-        <div class="row mb-3">
-            <label class="col-form-label col-2"><span class="align-middle">Mã hoặc tên</span></label>
-            <div class="col-10">
+        <div class="row">
+            <div class="col-6">
                 <input type="search"
                        class="form-row form-control col-10"
                        placeholder="Tìm kiếm theo mã hoặc tên"
                        value="@search_term" @oninput="Search" />
             </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-form-label col-2">Loại vật tư</label>
-            <div class="col-10">
-                <select class="form-control form-row" @oninput="Select">
-                    <option>Toàn bộ</option>
-                    @for (int i = 0; i < material_types.Count(); i++)
-                    {
-                        <option>@material_types.ElementAt(i).Name</option>
-                    }
-                </select>
+            <label class="col-1" for="from">Từ</label>
+            <div class="col-2">
+                <input id="from" class="col form-control" type="date" lang="vi" />
             </div>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input form-row"
-                   type="checkbox"
-                   checked="@show_only_with_stocks"
-                   @oninput="OnSelectCheckBox" />
-            <label class="form-check-label">Chỉ hiển thị vật tư còn trong kho</label>
+            <label class="col-1" for="to">Đến</label>
+            <div class="col-2">
+                <input id="to" class="col form-control" type="date" lang="vi" />
+            </div>
         </div>
     </div>
 </div>
@@ -52,17 +40,14 @@
     @* <h4 class="fw-bold py-3 mb-0"><span class="text-muted fw-light">Quản lý /</span> Kho </h4> *@
     <div>
         <button class="btn btn-primary me-2">
-            <i class="me-1"></i> Thêm vật tư mới
-        </button>
-        <button class="btn btn-primary">
-            <i class="me-1">Sửa thông tin vật tư </i>
+            <i class="me-1"></i> Tạo phiếu xuất kho
         </button>
     </div>
 </div>
 
 <div class="card">
     <h5 class="card-header">
-        Danh sách vật tư (Số lượng: @(items.Count()))
+        Phiếu nhập kho (Số lượng: @(items.Count()))
     </h5>
     <div class="table-responsive text-nowrap">
         @if (is_loading)
@@ -133,30 +118,29 @@
     private int current_page = 1;
     private int pageSize = Int32.MaxValue;
 
-    protected override async Task OnInitializedAsync()
-    {
-        is_loading = true;
+    // protected override async Task OnInitializedAsync()
+    // {
+    //     is_loading = true;
 
-        mt_res = await inventoryService.GetMaterialType();
-        if (mt_res.Success)
-        {
-            material_types = mt_res.MaterialTypes;
-            // select_value =
-        }
-        m_res = await inventoryService.GetMaterial();
-        if (m_res.Success)
-        {
-            materials = m_res.Materials;
-            items = materials.ToArray();
-        }
-        else
-        {
-            load_error = true;
-        }
-        PerformSearch(null);
-        is_loading = false;
-        StateHasChanged();
-    }
+    //     mt_res = await inventoryService.GetMaterialType();
+    //     if (mt_res.Success)
+    //     {
+    //         material_types = mt_res.MaterialTypes;
+    //     }
+    //     m_res = await inventoryService.GetMaterial();
+    //     if (m_res.Success)
+    //     {
+    //         materials = m_res.Materials;
+    //         items = materials.ToArray();
+    //     }
+    //     else
+    //     {
+    //         load_error = true;
+    //     }
+    //     PerformSearch(null);
+    //     is_loading = false;
+    //     StateHasChanged();
+    // }
 
     private void Search(ChangeEventArgs e)
     {
