--- a/AGDPMS.Web/Components/Inventory/ManageStock.razor
+++ b/AGDPMS.Web/Components/Inventory/ManageStock.razor
@@ -9,25 +9,22 @@
 
 @inject IInventoryService inventoryService
 
-<PageTitle>Kho</PageTitle>
+<PageTitle>Quản lý tồn kho</PageTitle>
 
-<h3>Quản lý kho</h3>
+<h3>Quản lý tồn kho</h3>
 
 <div class="card mb-3">
-    <h5 class="card-header">Bộ lọc tìm kiếm</h5>
+    <h5 class="card-header">Tìm kiếm</h5>
     <div class="m-3">
-        <div class="row mb-3">
-            <label class="col-form-label col-2"><span class="align-middle">Mã hoặc tên</span></label>
-            <div class="col-10">
+        <div class="row">
+            <div class="col-6">
                 <input type="search"
-                       class="form-row form-control col-10" 
-                       placeholder="Tìm kiếm theo mã hoặc tên"
-                       value="@search_term" @oninput="Search" />
+                        class="form-row form-control col-10" 
+                        placeholder="Tìm kiếm theo mã hoặc tên"
+                        value="@search_term" @oninput="Search" />
             </div>
-        </div>
-        <div class="row mb-3">
-            <label class="col-form-label col-2">Loại vật tư</label>
-            <div class="col-10">
+            <label class="col-form-label col-1">Loại vật tư</label>
+            <div class="col-2">
                 <select class="form-control form-row" @oninput="Select">
                     <option>Toàn bộ</option>
                     @for (int i = 0; i < material_types.Count(); i++)
@@ -37,13 +34,6 @@
                 </select>
             </div>
         </div>
-        <div class="form-check">
-            <input class="form-check-input form-row"
-                   type="checkbox" 
-                   checked="@show_only_with_stocks" 
-                   @oninput="OnSelectCheckBox" />
-            <label class="form-check-label">Chỉ hiển thị vật tư còn trong kho</label>
-        </div>
     </div>
 </div>
 
@@ -51,11 +41,8 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
     @* <h4 class="fw-bold py-3 mb-0"><span class="text-muted fw-light">Quản lý /</span> Kho </h4> *@
     <div>
-        <button class="btn btn-primary me-2">
+        <button class="btn btn-primary me-2" @onclick=ToggleAddMaterial>
             <i class="me-1"></i> Thêm vật tư mới
-        </button>
-        <button class="btn btn-primary">
-            <i class="me-1">Sửa thông tin vật tư </i>
         </button>
     </div>
 </div>
@@ -114,22 +101,71 @@
     </div>
 </div>
 
-<hr />
+@if (is_adding)
+{
+    <div class="card">
+        <h5 class="card-header">Thêm vật tư</h5>
+        <form class="m-3">
+            <div class="row mb-3">
+                <label class="col-1 form-label">Mã</label>
+                <div class="col-11">
+                    <input class="col-11 form-control" type="text" value="@add_material.Id" />
+				</div>
+            </div>
+            <div class="row mb-3">
+                <label class="col-1 form-label">Tên</label>
+                <div class="col-11">
+                    <input class="col-11 form-control" type="text" value="@add_material.Name" />
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label class="col-1 form-label">Loại vật tư</label>
+                <div class="col-11">
+                    <select class="form-control form-row" @bind="add_material.Type.Id">
+                        @foreach(MaterialType mt in material_types)
+                        {
+                            <option value="@mt.Id">@mt.Name</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label class="col-1 form-label">Tỷ trọng</label>
+                <div class="col-11">
+                    <input class="col-11 form-control" type="text" />
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label class="col-1 form-label">Chiều dài</label>
+                <div class="col-11">
+                    <input class="col-11 form-control" type="text" />
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label class="col-1 form-label">Chiều rộng</label>
+                <div class="col-11">
+                    <input class="col-11 form-control" type="text" />
+                </div>
+            </div>
+        </form>
+    </div>
+}
 
 @code {
+    private Material add_material;
     private GetMaterialResult m_res = null;
     private GetMaterialTypeResult mt_res = null;
     private bool load_error = false;
     private bool is_loading = true;
+    private bool is_adding = false;
     //filter
     private string search_term = string.Empty;
     private string select_value = string.Empty;
-    private bool show_only_with_stocks = false;
 
     private IEnumerable<Material> materials = new List<Material> { };
     private IEnumerable<MaterialType> material_types = new List<MaterialType> { };
     private Material[] items = new Material[] { };
-    private System.Threading.Timer? searchTimer;
+    private System.Threading.Timer? search_timer;
     private int current_page = 1;
     private int pageSize = Int32.MaxValue;
 
@@ -161,22 +197,15 @@
     private void Search(ChangeEventArgs e)
     {
         search_term = e.Value?.ToString() ?? string.Empty;
-        searchTimer?.Dispose();
-        searchTimer = new System.Threading.Timer(PerformSearch, null, 100, Timeout.Infinite);
+        search_timer?.Dispose();
+        search_timer = new System.Threading.Timer(PerformSearch, null, 100, Timeout.Infinite);
     }
 
     private void Select(ChangeEventArgs e)
     {
         select_value = e.Value?.ToString();
-        searchTimer?.Dispose();
-        searchTimer = new System.Threading.Timer(PerformSearch, null, 100, Timeout.Infinite);
-    }
-
-    private void OnSelectCheckBox(ChangeEventArgs e)
-    {
-        show_only_with_stocks = (Boolean)e.Value;
-        searchTimer?.Dispose();
-        searchTimer = new System.Threading.Timer(PerformSearch, null, 100, Timeout.Infinite);
+        search_timer?.Dispose();
+        search_timer = new System.Threading.Timer(PerformSearch, null, 100, Timeout.Infinite);
     }
 
     void PerformSearch(object? state)
@@ -189,11 +218,21 @@
             && (string.IsNullOrEmpty(select_value)
                 || select_value.Equals("Toàn bộ")
                 || m.Type.Name == select_value)
-            && (!show_only_with_stocks || m.Stocks.Sum(m => m.Stock) > 0)
         )
         .Skip((current_page - 1) * pageSize)
         .Take(pageSize)
         .ToArray();
         InvokeAsync(StateHasChanged);
+    }
+
+    void ToggleAddMaterial()
+    {
+        is_adding = !is_adding;
+        add_material = new Material { Id=string.Empty, Name=string.Empty, Type=material_types.ElementAt(0)};
+    }
+
+    void AddMaterial()
+    {
+        inventoryService.AddMaterial(add_material);
     }
 }
